[project]
name = "try-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.2.8",
    "azure-ai-inference>=1.0.0b9",
    "duckduckgo-search>=2025.4.4",
    "openai>=1.70.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
